--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,21 +5,35 @@ spring:
     execution:
       pool:
         max-size: 160
-  r2dbc:
-    url: r2dbc:mysql://localhost:3306/guestbook_service
+  datasource:
+    url: jdbc:mysql://localhost:3306/guestbook_service
     username: root
     password: password
-    pool:
-      max-size: 150
+    hikari:
+      maximum-pool-size: 150
+      jdbc-url: jdbc:mysql://localhost:3306/guestbook_service
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQLDialect
+        dialect.storage_engine: innodb
   flyway:
     baseline-on-migrate: true
-    baseline-version: 3
     url: jdbc:mysql://localhost:3306/guestbook_service
     user: root
     password: password
 
 logging:
   level:
-    #    org.springframework.r2dbc.core: debug
-    io.r2dbc.postgresql.QUERY: DEBUG
-    io.r2dbc.postgresql.PARAM: DEBUG
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
+      springframework:
+        orm.jpa: debug
+        transaction: debug
