--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,25 +1,34 @@
 spring:
   application:
-    name: blog-service
+    name: guestbook-service
   task:
     execution:
       pool:
         max-size: 160
-  r2dbc:
-    url: r2dbc:h2:mem:///testdb
-    username: sa
+  datasource:
+    username:
     password:
-    pool:
-      max-size: 150
-  flyway:
-    baseline-on-migrate: true
-    baseline-version: 3
-    url: jdbc:h2:mem:///testdb
-    user: sa
-    password:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    hikari:
+      maximum-pool-size: 150
+      jdbc-url: jdbc:h2:mem:testdb
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+        format_sql: true
 
 logging:
   level:
-    #    org.springframework.r2dbc.core: debug
-    io.r2dbc.postgresql.QUERY: DEBUG
-    io.r2dbc.postgresql.PARAM: DEBUG
+    org:
+      hibernate:
+        type:
+          descriptor:
+            sql: trace
+      springframework:
+        orm.jpa: debug
+        transaction: debug
