--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,13 @@
             <artifactId>jjwt-gson</artifactId>
             <version>0.12.6</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.squareup.okhttp3/mockwebserver -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>4.12.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
