--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=guestbook-service
 
 server.port=0
 
-spring.datasource.url=jdbc:mysql://localhost:3306/guestbook_service
+spring.datasource.url=jdbc:mysql://192.168.59.100:30001/guestbook_service
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.hikari.maximum-pool-size=50
 
 spring.flyway.baseline-on-migrate=true
-spring.flyway.url=jdbc:mysql://localhost:3306/guestbook_service
+spring.flyway.url=jdbc:mysql://192.168.59.100:30001/guestbook_service
 spring.flyway.user=root
 spring.flyway.password=password
 
